Support compile with specified GOOS and GOARCH

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,5 +6,7 @@ RUN apk update && \
     rm -rf /var/cache/apk/*
 
 ARG ngrok_domain
+ARG goos
+ARG goarch
 RUN wget -O build.sh https://raw.githubusercontent.com/charact3/qs-ngrok/master/docker/build.sh
-RUN NGROK_DOMAIN=$ngrok_domain source build.sh
+RUN NGROK_DOMAIN=$ngrok_domain GOOS=goos GOARCH=goarch source build.sh
