--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,4 +9,4 @@ ARG ngrok_domain
 ARG goos
 ARG goarch
 RUN wget -O build.sh https://raw.githubusercontent.com/charact3/qs-ngrok/master/docker/build.sh
-RUN NGROK_DOMAIN=$ngrok_domain GOOS=goos GOARCH=goarch source build.sh
+RUN NGROK_DOMAIN=$ngrok_domain GOOS=$goos GOARCH=$goarch source build.sh
